# cabal-simple-template-with-test

./: makefile  mytemplate.cabal
app/: Main.hs  Sum.hs
test/: DummySpec.hs
