cabal-version:      2.4
name:               mytemplate
version:            0.1.0.0

common shared-properties
    other-modules:
        Sum

executable mytemplate
    import: shared-properties
    main-is:          Main.hs
    build-depends:    base >=4.7 && <5 
    hs-source-dirs:   app 
    default-language: Haskell2010

test-suite mytemplate-test
    import: shared-properties
    main-is: Spec.hs
    type: exitcode-stdio-1.0
    other-modules:
        DummySpec

    hs-source-dirs: 
        app
        test
    build-tool-depends: hspec-discover:hspec-discover
    build-depends: base >=4.7 && <5 , hspec
    default-language: Haskell2010
    
    
    
     
